samples/_failures_safe/1761001977_f0ed84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae6b8428.c: In function ‘main’:
./samples/SAFE/__tmp_ae6b8428.c:143:20: error: expected identifier at end of input
  143 |                    entries[i].
      |                    ^~~~~~~
./samples/SAFE/__tmp_ae6b8428.c:143:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae6b8428.c:143:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae6b8428.c:143:20: error: expected declaration or statement at end of input
